
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.loadcoder</groupId>
	<artifactId>loadcoder-base</artifactId>
	<name>LoadCoder Parent</name>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<url>http://loadcoder.com</url>

	<description>This is the base maven project for Loadcoder. Its purpose is mainly to keep the project together and to manage the dependencies and versions</description>

	<modules>
		<module>loadcoder-utilities</module>
		<module>loadcoder-testutilities</module>
		<module>loadcoder-core</module>
		<module>loadcoder-test</module>
		<module>loadcoder-chart</module>
		<module>loadcoder-log</module>
		<module>loadcoder-cluster</module>
		<module>loadcoder-network</module>
		<module>loadcoder-all</module>
	</modules>

	<properties>
		<testng>full</testng>
		<sonar.jacoco.reportPath>${basedir}/target/coverage-reports/jacoco-unit.exec</sonar.jacoco.reportPath>
		<logback.version>1.2.3</logback.version>
		<slf4j.version>1.7.26</slf4j.version>
		<testng.version>6.14.3</testng.version>
		<mockito.version>1.10.19</mockito.version>
		<hamcrest.version>1.3</hamcrest.version>
		<chart-extensions.version>1.0.19.1</chart-extensions.version>
		<guava.version>28.0-jre</guava.version>
		<har-reader.version>2.1.7</har-reader.version>
		<okhttp.version>3.14.2</okhttp.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jackson-databind.version>2.9.9</jackson-databind.version>
		<docker-java.version>3.1.5</docker-java.version>
		<json-path.version>2.4.0</json-path.version>
		<activation.version>1.1.1</activation.version>
	</properties>

	<dependencyManagement>
		<dependencies>

			<dependency>
				<groupId>com.github.docker-java</groupId>
				<artifactId>docker-java</artifactId>
				<version>${docker-java.version}</version>
			</dependency>

			<dependency>
				<groupId>javax.activation</groupId>
				<artifactId>activation</artifactId>
				<version>${activation.version}</version>
			</dependency>

			<dependency>
				<groupId>com.jayway.jsonpath</groupId>
				<artifactId>json-path</artifactId>
				<version>${json-path.version}</version>
			</dependency>

			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson-databind.version}</version>
			</dependency>

			<dependency>
				<groupId>com.loadcoder</groupId>
				<artifactId>loadcoder-all</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.loadcoder</groupId>
				<artifactId>loadcoder-network</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.loadcoder</groupId>
				<artifactId>loadcoder-cluster</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.loadcoder</groupId>
				<artifactId>loadcoder-core</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.loadcoder</groupId>
				<artifactId>loadcoder-testutilities</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.loadcoder</groupId>
				<artifactId>loadcoder-logback</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.loadcoder</groupId>
				<artifactId>loadcoder-chart</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.loadcoder</groupId>
				<artifactId>loadcoder-utilities</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.loadcoder</groupId>
				<artifactId>loadcoder-result</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.loadcoder</groupId>
				<artifactId>chart-extensions</artifactId>
				<version>${chart-extensions.version}</version>
			</dependency>

			<dependency>
				<groupId>com.squareup.okhttp3</groupId>
				<artifactId>okhttp</artifactId>
				<version>${okhttp.version}</version>
			</dependency>

			<dependency>
				<groupId>de.sstoehr</groupId>
				<artifactId>har-reader</artifactId>
				<version>${har-reader.version}</version>
			</dependency>

			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>

			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback.version}</version>
			</dependency>

			<dependency>
				<groupId>org.testng</groupId>
				<artifactId>testng</artifactId>
				<version>${testng.version}</version>
			</dependency>

			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-all</artifactId>
				<version>${mockito.version}</version>
			</dependency>

			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-all</artifactId>
				<version>${hamcrest.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.sonarsource.java</groupId>
			<artifactId>sonar-jacoco-listeners</artifactId>
			<version>3.8</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.2</version>
				<configuration>
					<destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
					<dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>

					<excludes>
						<exclude>**/*Test.java</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<id>jacoco-initialize</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>jacoco-site</id>
						<phase>package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>3.4.0.905</version>
			</plugin>


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<detectOfflineLinks>false</detectOfflineLinks>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<!--plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-gpg-plugin</artifactId> 
				<version>1.6</version> <executions> <execution> <id>sign-artifacts</id> <phase>deploy</phase> 
				<goals> <goal>sign</goal> </goals> </execution> </executions> </plugin -->

		</plugins>

	</build>

	<licenses>
		<license>
			<name>GNU General Public License (GPL), version 3.0</name>
			<url>https://www.gnu.org/licenses/gpl-3.0.en.html</url>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:git://github.com/loadcoder/loadcoder.git</connection>
		<url>https://github.com/loadcoder/loadcoder</url>
	</scm>

	<developers>
		<developer>
			<name>Stefan Vahlgren</name>
			<email>stefan.vahlgren@loadcoder.com</email>
			<organization>Loadcoder</organization>
			<organizationUrl>http://loadcoder.com</organizationUrl>
		</developer>
	</developers>

	<distributionManagement>
		<!-- <snapshotRepository> <id>ossrh</id> <url>https://oss.sonatype.org/content/repositories/snapshots</url> 
			</snapshotRepository> -->
		<snapshotRepository>
			<id>local-snapshot-repo</id>
			<url>http://localhost:8081/artifactory/libs-snapshot</url>
		</snapshotRepository>
		<repository>
			<id>local-snapshot-repo</id>
			<url>http://localhost:8081/artifactory/libs-release</url>
		</repository>
	</distributionManagement>
</project>
